--- a/services/products.Domain.Infra/products.Domain.Infra.csproj
+++ b/services/products.Domain.Infra/products.Domain.Infra.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\products.Domain\products.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
