--- a/services/products.Domain.Api/appsettings.json
+++ b/services/products.Domain.Api/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "degestore": "Server=localhost,1433;Database=degestore;User ID=sa;Password=dege1994;Trusted_Connection=False;TrustServerCertificate=True" },
+  "ConnectionStrings": { "dshop": "Server=localhost,1433;Database=dshop;User ID=sa;Password=dege1994;Trusted_Connection=False;TrustServerCertificate=True" },
   "AllowedHosts": "*"
 }
