--- a/services/products.Domain.Api/appsettings.json
+++ b/services/products.Domain.Api/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "dshop": "Server=localhost,1433;Database=dshop;User ID=sa;Password=dege1994;Trusted_Connection=False;TrustServerCertificate=True" },
+  "ConnectionStrings": {
+    "dshop": "Server=localhost,1433;Database=dshop;User ID=sa;Password=dege1994;Trusted_Connection=False;TrustServerCertificate=True"
+  },
+  "OmieSettings": {
+    "OMIE_URL": "https://app.omie.com.br/api/v1/geral",
+    "OMIE_APP_KEY": "2719655280342",
+    "OMIE_APP_SECRET": "147e1a1cbf0fbe35a0c02d2d97b5ec1e"
+  },
   "AllowedHosts": "*"
 }
