wip: auth with jwt token

--- a/services/products.Domain.Api/appsettings.json
+++ b/services/products.Domain.Api/appsettings.json
@@ -13,5 +13,8 @@
     "OMIE_APP_KEY": "2719655280342",
     "OMIE_APP_SECRET": "147e1a1cbf0fbe35a0c02d2d97b5ec1e"
   },
+  "Auth": {
+    "Secret": "r4kxyV-a956l0-CoZbX1-HY90jj-7wgRkZ"
+  },
   "AllowedHosts": "*"
 }
