--- a/services/products.Domain.Infra/products.Domain.Infra.csproj
+++ b/services/products.Domain.Infra/products.Domain.Infra.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Flurl" Version="3.0.6" />
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
