wip: cart context

--- a/services/products.Domain.Api/appsettings.json
+++ b/services/products.Domain.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "dshop": "Server=localhost,1433;Database=dshop;User ID=sa;Password=dege1994;Trusted_Connection=False;TrustServerCertificate=True"
+    "dshopPersonal": "Server=localhost,1433;Database=dshop;User ID=sa;Password=dege1994;Trusted_Connection=False;TrustServerCertificate=True",
+    "dshopCloud": "Server=localhost\\SQLEXPRESS;Database=dshop;Trusted_Connection=True;"
   },
   "OmieSettings": {
     "OMIE_URL": "https://app.omie.com.br/api/v1/geral",
